Fixed login and update flash message

--- a/app/templates/secure_page.html
+++ b/app/templates/secure_page.html
@@ -2,6 +2,7 @@
 
 {% block main %}
     <h1>Secure Page</h1>
+    {% include 'flash_messages.html' %}
     <h5>High Hopes - Panic! At The Disco</h5>
     <p>Had to have high, high hopes for a living
         Shooting for the stars when I couldn't make a killing
