--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -2,5 +2,6 @@
 
 {% block main %}
 <h1 class="page-header">About</h1>
+{% include 'flash_messages.html' %}
 <p>This web app is about Flask-Migrate and Flask-Login.</p>
 {% endblock %}
